infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-ingress
  namespace: invoice-triage
spec:
  ingressClassName: nginx
  rules:
    - host: invoice.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: invoice-api
                port: { number: 3000 }
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: invoice-api
                port: { number: 3000 }
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: invoice-api
                port: { number: 3000 }
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: invoice-api
                port: { number: 3000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invoice-frontend
                port: { number: 3001 }
